syntax = "proto3";
package proto;
option go_package = ".";

message Tweet{
  string UserID = 1;
  string Username = 2;
  string TweetID = 3;
  string Body = 4;
  repeated string Trend = 5;
}

service TrendService{
  rpc PostTrend(PostTrendReq) returns (PostTrendRes);
  rpc GetTrend(GetTrendReq) returns (GetTrendRes);
  rpc DeleteData(DeleteDataReq) returns (DeleteDataRes);
}

//posttrend
message PostTrendReq{Tweet tweet = 1;}
message PostTrendRes{Tweet tweet = 1;}

//gettrend
message GetTrendReq{string Trends = 1;}
message GetTrendRes{repeated Tweet tweets = 1;}

//deletedata
message DeleteDataReq{string userId = 1;}
message DeleteDataRes{string status = 1;}
